--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.3",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "morgan": "^1.10.0"
   }
